// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render a glyph 1`] = `
<div
  class="no-data-view"
/>
`;

exports[`should render a default component 1`] = `
<div
  class="no-data-view"
>
  <div
    class="glyph"
  >
    <svg
      data-name="Layer 1"
      id="Layer_1"
      style="height:170px;width:170px;"
      viewbox="0 0 251.73 251.73"
    >
      <path
        d="M127.72,9.76a118,118,0,0,1,45.9,226.59A118,118,0,0,1,81.82,19a117.18,117.18,0,0,1,45.9-9.26m0-7.94A125.87,125.87,0,1,0,253.58,127.69,125.87,125.87,0,0,0,127.72,1.83Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M94.29,116.54a5.13,5.13,0,0,1,4.56-2.77h83.78V103.2a5.25,5.25,0,0,0-5.2-5.2l-46.33.24a13.44,13.44,0,0,1-8.75-3.78l-9-9.22a13.44,13.44,0,0,0-8.75-3.78H74.37a5.25,5.25,0,0,0-5.2,5.2v79.42c0,.08,0,.15,0,.23a4.94,4.94,0,0,1,.55-2.08Z"
        style="fill:#e8e9ea;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M201.85,113.77h-103a5.13,5.13,0,0,0-4.56,2.77L69.73,164.22a4.94,4.94,0,0,0-.55,2.08,5,5,0,0,0,5,5.21H177.35a5.13,5.13,0,0,0,4.56-2.77l24.5-47.59A5.08,5.08,0,0,0,201.85,113.77Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
    </svg>
  </div>
</div>
`;

exports[`should render a heading 1`] = `
<div
  class="no-data-view"
>
  <div
    class="glyph"
  >
    <svg
      data-name="Layer 1"
      id="Layer_1"
      style="height:170px;width:170px;"
      viewbox="0 0 251.73 251.73"
    >
      <path
        d="M127.72,9.76a118,118,0,0,1,45.9,226.59A118,118,0,0,1,81.82,19a117.18,117.18,0,0,1,45.9-9.26m0-7.94A125.87,125.87,0,1,0,253.58,127.69,125.87,125.87,0,0,0,127.72,1.83Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M94.29,116.54a5.13,5.13,0,0,1,4.56-2.77h83.78V103.2a5.25,5.25,0,0,0-5.2-5.2l-46.33.24a13.44,13.44,0,0,1-8.75-3.78l-9-9.22a13.44,13.44,0,0,0-8.75-3.78H74.37a5.25,5.25,0,0,0-5.2,5.2v79.42c0,.08,0,.15,0,.23a4.94,4.94,0,0,1,.55-2.08Z"
        style="fill:#e8e9ea;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M201.85,113.77h-103a5.13,5.13,0,0,0-4.56,2.77L69.73,164.22a4.94,4.94,0,0,0-.55,2.08,5,5,0,0,0,5,5.21H177.35a5.13,5.13,0,0,0,4.56-2.77l24.5-47.59A5.08,5.08,0,0,0,201.85,113.77Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
    </svg>
  </div>
  <p
    class="heading"
  >
    test heading
  </p>
</div>
`;

exports[`should render a subtext 1`] = `
<div
  class="no-data-view"
>
  <div
    class="glyph"
  >
    <svg
      data-name="Layer 1"
      id="Layer_1"
      style="height:170px;width:170px;"
      viewbox="0 0 251.73 251.73"
    >
      <path
        d="M127.72,9.76a118,118,0,0,1,45.9,226.59A118,118,0,0,1,81.82,19a117.18,117.18,0,0,1,45.9-9.26m0-7.94A125.87,125.87,0,1,0,253.58,127.69,125.87,125.87,0,0,0,127.72,1.83Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M94.29,116.54a5.13,5.13,0,0,1,4.56-2.77h83.78V103.2a5.25,5.25,0,0,0-5.2-5.2l-46.33.24a13.44,13.44,0,0,1-8.75-3.78l-9-9.22a13.44,13.44,0,0,0-8.75-3.78H74.37a5.25,5.25,0,0,0-5.2,5.2v79.42c0,.08,0,.15,0,.23a4.94,4.94,0,0,1,.55-2.08Z"
        style="fill:#e8e9ea;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M201.85,113.77h-103a5.13,5.13,0,0,0-4.56,2.77L69.73,164.22a4.94,4.94,0,0,0-.55,2.08,5,5,0,0,0,5,5.21H177.35a5.13,5.13,0,0,0,4.56-2.77l24.5-47.59A5.08,5.08,0,0,0,201.85,113.77Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
    </svg>
  </div>
  <p
    class="subtext"
  >
    test subtext.
  </p>
</div>
`;

exports[`should render a with subtext content 1`] = `
<div
  class="no-data-view"
>
  <div
    class="glyph"
  >
    <svg
      data-name="Layer 1"
      id="Layer_1"
      style="height:170px;width:170px;"
      viewbox="0 0 251.73 251.73"
    >
      <path
        d="M127.72,9.76a118,118,0,0,1,45.9,226.59A118,118,0,0,1,81.82,19a117.18,117.18,0,0,1,45.9-9.26m0-7.94A125.87,125.87,0,1,0,253.58,127.69,125.87,125.87,0,0,0,127.72,1.83Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M94.29,116.54a5.13,5.13,0,0,1,4.56-2.77h83.78V103.2a5.25,5.25,0,0,0-5.2-5.2l-46.33.24a13.44,13.44,0,0,1-8.75-3.78l-9-9.22a13.44,13.44,0,0,0-8.75-3.78H74.37a5.25,5.25,0,0,0-5.2,5.2v79.42c0,.08,0,.15,0,.23a4.94,4.94,0,0,1,.55-2.08Z"
        style="fill:#e8e9ea;"
        transform="translate(-1.85 -1.83)"
      />
      <path
        d="M201.85,113.77h-103a5.13,5.13,0,0,0-4.56,2.77L69.73,164.22a4.94,4.94,0,0,0-.55,2.08,5,5,0,0,0,5,5.21H177.35a5.13,5.13,0,0,0,4.56-2.77l24.5-47.59A5.08,5.08,0,0,0,201.85,113.77Z"
        style="fill:#f4f4f4;"
        transform="translate(-1.85 -1.83)"
      />
    </svg>
  </div>
  <div
    class="subtext-content"
  >
    <p>
      test subtextContent
    </p>
  </div>
</div>
`;
